overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,13 @@
 body {
   margin: 0 auto;
   font-family: "Raleway", sans-serif;
+  overflow-x: hidden;
+}
+.loader{
+  overflow-x: hidden;
+}
+.page_content{
+  overflow-x: hidden;
 }
 body h1 {
   font-weight: 700;
